                - Correct the count of buffers analyzed to account for the
                  fact that the first buffer is sequence 0 so we need
                  the first buffer to increment our buffers analyzed -> 0.

January 5, 2009 - Added gamma summary spectrum.
January 15, 2009 
                - Fix Xamine compilation errors with -pedantic.
                  Need to use reinterpret_cast to cast XtPointer ->
                  function pointers.
                - Document gamma summary spectra in the on-board html.
                - Document GUI gamma summary spectrum creator.
                - Added API docs for gamma deluxe and gamma summary spectra
February 18, 2008
                - Made the background of the button box a clear indicator of whether
                  or not SpecTcl is in a test system.
pre2:
  March 6, 2009  - Make the rEvent array hold doubles not floats.
  March 18, 2009 - Fix tkcon.tcl so it does not implement a clear command
                   that interferes with the SpecTcl clear command.
  March 24, 2009 - Make the delgrob dialog a multiselect.
  May 1, 2009    - CSpectrum2Dm.{h,cpp}  Ensure these spectra get put in the
                  don't need a parameter list rather than some need a parameter list
                  which causes them to be grossly underincremented.
pre3:
  May   2009     - Port to debian lenny with minimized compiler warnings.
  May 20,2009    - In source files add back the newline after each lineof
                   a multiline command to prevent syntax errors on e.g.
                   pseudo defs.
  May 27, 2009   - Fix error switch/case for handling gate point scaling.
                   gamma gates resulted in no points being accepted.
  August 13, 2009 - Fix error in Strip chart spectrum was not requiring
                   that target parameter was defined.
                  - Fix error in strip chart shift.  If shift is larger than spectrum
                    channel count would segfault.